# services/campus-social-service/src/social/dto/upload-media.dto.ts
@@ -1,5 +1,4 @@
 import { IsBase64, IsIn, IsString, MaxLength } from 'class-validator';
-import { IsString, MaxLength } from 'class-validator';
 
 export class UploadMediaDto {
   @IsString()
@@ -13,9 +12,5 @@ export class UploadMediaDto {
   @IsString()
   @IsBase64()
   @MaxLength(10_000_000)
-  @MaxLength(100)
-  mimeType!: string;
-
-  @IsString()
   contentBase64!: string;
 }
